--- a/client/resources/static/css/tophastag.css
+++ b/client/resources/static/css/tophastag.css
@@ -13,19 +13,8 @@
     /* display: grid; */
     background: var(--white);
     padding: 20px;
+    padding-bottom: 30px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    overflow-y: auto;
-    min-height: 1000px;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.topcoin::-webkit-scrollbar {
-    display: none;
-}
-  /* Hide scrollbar for IE, Edge and Firefox */
-.topcoin {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
 }
 
 .cardChartBox {
@@ -36,6 +25,18 @@
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-gap: 30px; 
+    overflow-y: auto;
+    max-height: 500px;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.cardChartBox::-webkit-scrollbar {
+    display: none;
+}
+  /* Hide scrollbar for IE, Edge and Firefox */
+.cardChartBox {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .cardChart {
