--- a/flask/static/css/tophastag.css
+++ b/flask/static/css/tophastag.css
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     padding: 20px;
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 2fr 2fr;
     grid-gap: 30px; 
     overflow-y: auto;
@@ -75,16 +75,10 @@
     flex-direction: column;
 }
 
-.x-box {
-    width: 430px;
-    height: 430px;
-    border-radius: 50%;
-    background-color: green;
-    display: flex;
-    justify-content: center;
+td {
+    text-align: center;
 }
 
-.x-box-cont {
-    font-size: 20px;
-    text-align: center;
+td:first-child {
+    text-align: left;
 }
